--- a/event.html
+++ b/event.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>EVENTS</title>
-        <link rel="icon" href="img/date.png">
+        <link rel="icon" href="date.png">
 
     </head>
 
@@ -19,7 +19,7 @@
         </center>
 
         <center>
-        <img src="img/event1.png">
+        <img src="event1.png">
         <h1>Photo Gallery Event</h1>
         <h2>Free Entry | Free Food | Pets are not allowed</h2>
         <p> Take a glimpse into the vibrant moments from our recent event! This gallery showcases the energy, excitement, and unforgettable memories 
@@ -28,7 +28,7 @@
         </center> 
 
         <center>
-        <img src="img/event2.png">
+        <img src="event2.png">
         <h1>
             <a href="https://www.myntra.com/">Fashion store</a>
         </h1>
